--- a/ios/ToanHwa/Info.plist
+++ b/ios/ToanHwa/Info.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+<key>NSPhotoLibraryUsageDescription</key>
+<string>Your message to explain why the app needs access to photos.</string>
+<key>NSCameraUsageDescription</key>
+<string>Your message to explain why the app needs access to the camera.</string>
+
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
