--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-element-dropdown": "^2.12.1",
     "react-native-gesture-handler": "^2.17.1",
+    "react-native-image-crop-picker": "^0.41.2",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "^3.12.1",
     "react-native-safe-area-context": "^4.10.7",
