--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-reanimated": "^3.12.1",
     "react-native-safe-area-context": "^4.10.7",
     "react-native-screens": "^3.32.0",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
