--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
     "react-native-date-picker": "^5.0.4",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-element-dropdown": "^2.12.1",
+    "react-native-file-viewer": "^2.1.5",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-crop-picker": "^0.41.2",
     "react-native-reanimated": "^3.12.1",
     "react-native-safe-area-context": "^4.10.7",
     "react-native-screens": "^3.32.0",
-    "react-native-vector-icons": "^10.1.0",
-    "rn-fetch-blob": "^0.12.0"
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
